--- a/styles/right.css
+++ b/styles/right.css
@@ -35,4 +35,114 @@ left: 30.5%;
     color: #Ffff;
 }
 
+.section-projects-card {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-card{
+    background-color: #621f7d;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    color: #fff;
+    padding: 1rem;
+    width: 300px;
+    text-align: center;
+}
+
+.container-img-card img {
+    margin-top: 1rem;
+    width: 100%;
+    height: 200px;
+    object-fit: cover; 
+    border-radius: 8px;
+}
+
+.container-description-card{
+    margin-top: 0.5rem;
+    background-color: #d81bc269;
+    height: 190px;
+    width: 300px;
+    border-radius: 4px;
+    
+}
+
+.container-description-card:hover{ 
+    margin-top: 0.5rem;
+    background-color: #f777e880;
+    height: 190px;
+    width: 300px;
+    border-radius: 4px;
+    
+}
+
+.container-description-card h3{
+  margin: 0.5rem 1rem;
+  font-size: 1.5rem;
+  color: aqua;
+  margin-bottom: 2rem;
+
+}
+
+.container-description-card p{
+    color: #fff;
+    margin-bottom: 1.5rem;
+    margin: 0.5rem 1rem;
+  
+  }
+
+.container-description-card button {
+    margin-top: 1rem;
+    margin-left: 25%;
+    background-color: #e91e63;
+    border: none;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    border-radius: 4px;
+
+}
+
+.container-description-card button:hover {
+    background-color: #d81b60;
+}
+
+.section-referencia-card{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center; 
+}
+
+.section-referencia-card> .container-referencia-contac{
+margin-top: 2rem;
+background-color: rgba(253, 189, 235, 0.936);
+border-radius: 0.2rem;
+}
+.container-referencia-contac p{
+    margin: 0.5rem 1rem;
+}
+.container-referencia-contac:hover{
+    background-color: #ff1c8aa4;
+    
+}
+
+.section-experiences-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center; 
+}
+
+.contairn-experience p{
+    color: antiquewhite;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
 
